# docassemble-CertOfService

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/CertOfService/data/questions/: cert_of_service.yml
docassemble/CertOfService/data/templates/: cert_of_service_next_steps.docx
