[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.CertOfService"
version = "1.0"
description = "Cert of Service"
readme = "README.md"
authors = [
    { name = "Shivani Dahya", email = "shivani.dahya@su.suffolk.edu" },
]
dependencies = [
    "docassemble.ALAnyState @ git+https://github.com/SuffolkLITLab/docassemble-ALAnyState.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
